# StreamLabs_Assignment

./: ReadMe.md
Src/: CMakeLists.txt
Src/Client/: CMakeLists.txt  Client.cpp  Client.h
Src/CustomClass/: CustomClass.h
Src/Server/: CMakeLists.txt  Server.cpp  Server.h
Src/Utilities/: Utilities.h
